--- a/Yandex.html
+++ b/Yandex.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Temporary Email Generator</title>
-    <link rel="stylesheet" href="genemail.css">
+    <link rel="stylesheet" href="Yandex.css">
 </head>
 <body>
 
